5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1808_2581.log
== TEST (2019-06-29 16:28:04) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))
admin = 0
admout = 0
chaoin = 0
chaout = 0
for i in ve[0]:
	if(i != -1):
		admin = admin + ve[1]
		admin = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
print("ADM")
print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:31:37) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))
admin = 0
admout = 0
chaoin = 0
chaout = 0
while(ve != -1)
	for i in ve:
		admin = admin + ve[1]
		admin = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
	ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))	
print("ADM")
print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
File "XXXX", line 7
    while(ve != -1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:31:45) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))
admin = 0
admout = 0
chaoin = 0
chaout = 0
while(ve != -1):
	for i in ve:
		admin = admin + ve[1]
		admin = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
	ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))	
print("ADM")
print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:32:43) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))
admin = 0
admout = 0
chaoin = 0
chaout = 0
while(ve[0] != -1):
	for i in ve:
		admin = admin + ve[1]
		admin = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
	ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))	
print("ADM")
print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:35:29) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))
admin = 0
admout = 0
chaoin = 0
chaout = 0
while(ve[0] != -1):
	for i in ve:
		admin = admin + ve[1]
		admin = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
	ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))	
print("ADM")
print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:36:22) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))
admin = 0
admout = 0
chaoin = 0
chaout = 0
while(ve[0] != -1):
	for i in ve:
		admin = admin + ve[1]
		admin = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
	ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))	
print("ADM")
print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 21:23:50) 
-- CODE:
from numpy import *
ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))

while(ve[0] != -1):
	admin = 0
	admout = 0
	chaoin = 0
	chaout = 0
	for i in ve:
		admin = admin + ve[1]
		admout = admout + ve[2]
		chaoin = chaoin + ve[3]
		chaout = chaout + ve[4]
	ve = array(eval(input("digite [tempo, admIn, admOut, ChIn, ChOut]: ")))	
print("ADM")

print("Entrada: ",admin)
print("Saida: ",admout)
print("CHAO")
print("Entrada: ",chaoin)
print("Saida: ",chaout)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
